[workspace]
resolver = "2"
members = ["core"]

[workspace.package]
repository = "https://github.com/taldoflemis/haiyu-sabi"
version = "0.1.0"
edition = "2021"
authors = ["Said Rodrigues <coderflemis@gmail.com>"]
readme = "README.md"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
