[package]
name = "haiyu-sabi-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
tokio = { version = "1.42.0", features = ["full"] }
